# gitconfig

./: .copilot-instructions.md  .gitconfig  .gitconfig.template  .gitignore  .gitignore_global  CHANGELOG.md  CLAUDE.md  DOLT_REMOTE.md  Initialize-Symlinks.ps1  README.md  STATUS.md  gitconfig_helper.py  knowledge-graph.jsonl  manifest  pester.config.ps1  pyproject.toml  run-tests.ps1  test.txt
.beads/: .gitignore  config.yaml  metadata.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: claude.yml
config/: pester.config.ps1
docs/: BRANCH_PROTECTION.md  CHANGELOG.md  WORKFLOW.md  knowledge-graph.jsonl
scripts/: Cleanup-GitConfig.ps1  Initialize-LocalConfig.ps1  Initialize-Symlinks.ps1  Setup-GitConfig.ps1  Update-GitConfig.ps1  pull-daily.ps1
scripts/linux version/: README.md  cleanup-gitconfig.sh  initialize-gitconfig.sh  initialize-local-config.sh  install.sh  setup-gitconfig.sh  update-gitconfig.sh
scripts/mac version/: cleanup-gitconfig.sh  initialize-gitconfig.sh  initialize-local-config.sh  install.sh  setup-gitconfig.sh  update-gitconfig.sh
scripts/shared/: deps.py  functions.sh  initialize-gitconfig.sh  update-gitconfig.sh
scripts/shell/: git-alias-widget.bash  git-alias-widget.ps1  git-alias-widget.zsh
specs/: git-skill-diff.md
tests/: Cleanup-GitConfig.Tests.ps1  Encoding.Tests.ps1  Functions.Tests.ps1  GitconfigTemplate.Tests.ps1  Initialize-GitConfig.Tests.ps1  Initialize-LocalConfig.Tests.ps1  Integration.Tests.ps1  Setup-GitConfig.Tests.ps1  Update-GitConfig.Tests.ps1  gitconfig_helper.Tests.ps1  run-tests.ps1
(+15 files in other folders)
